<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Drink Water Reminder</string>
    <string name="channel_name">reminderChannel</string>
    <string name="channel_description">notification channel of DrinkNow</string>
    <string name="notification_title">It\'s time to drink water</string>
    <string name="history_menu">History</string>
    <string name="today_menu">Today</string>
    <string name="reminders_menu">Reminders</string>
    <string name="reminderTitle">Reminders</string>
    <string name="historyTitle">History</string>
    <string name="new_reminder">New reminder</string>
    <string name="add_new_reminder">Add</string>
    <string name="back">Back</string>
    <string name="new_reminder_title">What time would you like to be reminded?</string>
    <string name="drink_title">Drink</string>
    <string name="welcome_title">Welcome to</string>
    <string name="name_question">"How do you prefer to be called? "</string>
    <string name="hint_name">Name</string>
    <string name="daily_goal_question">What is your daily goal?</string>
    <string name="begin_welcome">Begin</string>
    <string name="update_welcome">Update</string>
    <string name="greeting">Hello, %1$s!</string>
    <string name="greeting_without_name">Hello!</string>
    <string name="water_with_ml">%1$d ml</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="goal_of_day">Daily\ngoal</string>
    <string name="day_title">Day</string>
    <string name="label_remove_button">Remove</string>
    <string name="reminders_marked">Marked\\nreminders</string>
    <string name="call_privacy_policy">Want to know how to handle your data? Access our <u>Privacy Policy</u></string>
    <string name="mensal">Monthly</string>
    <string name="daily">Daily</string>
    <string name="select_a_day">Select a day to see your history</string>
    <string name="reminder_succefull">Reminder added Successfully</string>
    <string name="you_can_in_drinknow">At DrinkNow you can:</string>
    <string name="features_1">Save you daily\nwater intake</string>
    <string name="features_2">View your\ncomsumption history</string>
    <string name="features_3">Set reminders\nthat remind you\nto hydrate</string>
    <string name="exact_alarm_permission_title">Exact alarm permission</string>
    <string name="exact_alarm_permission_description">Allowing alarms allows water reminders to work properly. If it is not accepted, the application will not be able to send notifications</string>
    <string name="optimize_battery_permission_title">Battery allowance not optimized</string>
    <string name="optimize_battery_permission_description">"Removing the app from battery optimization allows reminders to work properly. However, battery consumption may increase. If not accepted, the reminders may not work as expected Steps: 1. On the page that will open, choose the list with all applications. 2. Search for WaterReminder. 3. Uncheck the app to remove it from battery optimization. "</string>
    <string name="permissions_title">Permissions</string>
    <string name="remove_drink">Remove drink</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="share_message">Come see how I improved my water consumption using Water Reminder - DrinkNow\n %s</string>
    <string name="share_title">Share with your friends</string>
    <string name="copied">Copied to clipboard</string>
    <string name="share_with_your_friends">Share with your friends!</string>
    <string name="share_dialog_text">We are very happy that this app is helping you!  Help your friends and share with them!</string>
    <string name="share_button">Share</string>
    <string name="copy_share_link">Copy the link</string>
    <string name="review_in_store">Review in Store</string>
    <string name="review_our_app_nand_help_us">Review our app\nand help us!</string>
    <string name="review_general_text">We are very happy that this app is helping you! Review our app and share your opnion!</string>
    <string name="review_sorry_text">Sorry, our app is constantly updated and we hope to bring you a better experience soon.</string>
    <string name="title_schedule_reminders">Let\'s go schedule reminders</string>
    <string name="next">Next</string>
    <string name="continue_text">Continue</string>
    <string name="schedule_start_timer">Select a start time</string>
    <string name="schedule_finish_time">Select a finish time</string>
    <string name="schedule_interval_time">Select a interval between reminders</string>
    <string name="schedule_button">Schedule my reminders</string>
</resources>