<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">


    <TextView
        android:id="@+id/name_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:textColor="?attr/colorOnBackground"
        android:gravity="center"
        android:inputType="textShortMessage"
        android:text="@string/name_question"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:imeActionLabel="OK"
                android:imeOptions="actionDone"
                android:textColor="@color/bottomBackground"
                android:textColorHint="@color/bottomBackground"
                android:backgroundTint="@color/bottomBackground"
                android:inputType="textPersonName"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/name_question"
                app:layout_constraintStart_toStartOf="@+id/name_question"
                app:layout_constraintTop_toBottomOf="@id/name_question" />

            <TextView
                android:id="@+id/goal_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/daily_goal_question"
                android:textColor="?attr/colorOnBackground"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

            <SeekBar
                android:id="@+id/daily_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:max="20"
                android:progressTint="@color/Accent"
                android:thumb="@drawable/ic_water1"
                android:layout_marginStart="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goal_question" />

            <TextView
                android:id="@+id/daily_goal_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="?attr/colorOnBackground"
                android:gravity="center"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_goal" />

    <TextView
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="?attr/colorOnBackground"
        android:gravity="center"
        android:text="1000ml = 1 Litro"
        android:textSize="16sp"
        android:alpha="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_goal_value" />

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_privacy_policy"
        android:textColor="?attr/colorOnSurface"
        android:background="@color/transparent"
        android:textAlignment="center"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_begin"
        style="@style/btn_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/begin_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>