<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragments.PermissionsFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/permissions_title"

        android:textSize="48sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/exact_alarm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/exact_alarm_permission_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exact_alarm_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/exact_alarm_permission_description"
                android:textSize="14sp"
                android:alpha="0.7"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/exact_alarm_text"
                app:layout_constraintTop_toBottomOf="@+id/exact_alarm_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/exact_alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/exact_alarm_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/exact_alarm_text"
                app:thumbTint="@color/switch_color" />


            <TextView
                android:id="@+id/battery_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textColor="?attr/colorOnBackground"
                android:layout_marginTop="24dp"
                android:text="@string/optimize_battery_permission_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exact_alarm_description" />

            <TextView
                android:id="@+id/battery_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/optimize_battery_permission_description"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="@+id/exact_alarm_text"
                app:layout_constraintTop_toBottomOf="@+id/battery_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/battery_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/battery_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/battery_text"
                app:thumbTint="@color/switch_color" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btn_next_page"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="48dp"
        android:alpha="1"
        android:background="@drawable/btn_next_month"
        android:elevation="12dp"
        android:src="@drawable/arrow_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:tint="?attr/colorOnPrimary" />

    <Button
        android:id="@+id/btn_back"
        style="@style/btn_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>